--- a/esox/package.json
+++ b/esox/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "3.0.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.87.1"
   },
   "devDependencies": {},
   "scripts": {
