--- a/esox/package.json
+++ b/esox/package.json
@@ -17,7 +17,9 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.87.1"
+    "semantic-ui-react": "^0.87.1",
+    "immutable": "^2.0.6",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {},
   "scripts": {
